tdf#119800 DOCX import: fix vanished objects

Not hidden objects, for example shapes and tables were
converted to hidden text, when they were anchored to
empty hidden paragraphs (see w:vanish character property
in OOXML).

Note: now DOCX round-trip doesn't change the document
layout (previously DOCX export hid the vanished object),
but Writer shows also an extra empty paragraph with
the fixed object, so the layout is still not the same
here.

Follow-up of commit 2be656908e9f30d0b0f795cc67096f0d673a3a21
(tdf#128646 DOCX import: don't hide shape of hidden paragraph),
extending the fix also for not table paragraphs.

Change-Id: I2af4ad42dd9e67f0daf4392fcc6875855eb4ba7c